# virtual-desktop-bar

./: CHANGELOG.md  CMakeLists.txt  KWIN.md  README.md  install-fedora-deps.sh  install-opensuse-deps.sh  install-redhat-deps.sh
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md  question.md
package/: metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/ui/: AddDesktopButton.qml  Applet.qml  DesktopButton.qml  DesktopEntry.qml  DesktopNameDialog.qml  DesktopNamePopup.qml  DesktopSwitcher.qml  PlusButton.qml  main.qml
package/contents/ui/applet/: AddDesktopButton.qml  Applet.qml  Container.qml  DesktopButton.qml  DesktopButtonTooltip.qml  DesktopRenamePopup.qml
package/contents/ui/common/: GrowingTextField.qml  TextTooltip.qml  Utils.js
package/contents/ui/config/: AdvancedConfig.qml  AppearanceConfig.qml  AppearanceTab.qml  BehaviorConfig.qml  BehaviorTab.qml  ColorButton.qml  GeneralConfig.qml  HintIcon.qml  MyColorButton.qml  MyColorDialog.qml  SectionHeader.qml
plugin/: DesktopInfo.cpp  DesktopInfo.hpp  VirtualDesktopBar.cpp  VirtualDesktopBar.hpp  VirtualDesktopBarPlugin.cpp  VirtualDesktopBarPlugin.hpp  desktopinfo.h  kwindbusdesktopshim.h  mdsmodel.cpp  mdsmodel.h  mdsplugin.cpp  mdsplugin.h  qmldir  vdbmodel.cpp  vdbmodel.h  vdbplugin.cpp  vdbplugin.h  virtualdesktopbar.cpp  virtualdesktopbar.h  virtualdesktopbarplugin.cpp  virtualdesktopbarplugin.h
scripts/: build-applet.sh  install-applet.sh  install-dependencies-arch.sh  install-dependencies-fedora.sh  install-dependencies-opensuse.sh  install-dependencies-ubuntu.sh  install-redhat-deps.sh  install-ubuntu-deps.sh  uninstall-applet.sh
